--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2212,3 +2212,13 @@ ul.ws-footer-payments li{
             padding-top: 40px;
         }
     
+        .ws-overlay {
+            background-color: rgba(0, 0, 0, 0);
+        }
+    
+        .ws-works-item figure:hover img {
+            opacity: 1;
+            -webkit-transform: scale(1);
+            transform: scale(1);
+        }
+    
